#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package pyimgalgos
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

=======
Tag: V00-00-25
2015-05-12 Mikhail S. Dubrovin
- add apps in app/ merge_max_ndarrays merge_mask_ndarrays convert_npy_to_txt convert_txt_to_npy
	
Tag: V00-00-24
2015-04-27 Mikhail S. Dubrovin
- add directory data/scripts with test scripts (PSAS-34)
- add class EventViewer
	
Tag: V00-00-23
2015-04-24 Mikhail S. Dubrovin
- GlobalGraphics.py - add methods move_fig, save_fig, hist1d (PSAS-34)

Tag: V00-00-22
2015-04-14 Mikhail S. Dubrovin
- GlobalGraphics.py - add singleton Store, and methods plot_img and fig_axes

Tag: V00-00-21
2014-08-18 Mikhail S. Dubrovin
- update src/TestImageGenerator.py
	
Tag: V00-00-20
2014-08-08 Mikhail S. Dubrovin
- move python modules from pyimgalgos to PSCalib for 
        GeometryObject.py, GeometryAccess.py
	SegGeometry.py, SegGeometryStore.py ,SegGeometryCspad2x1V1.py
	
Tag: V00-00-19
2014-06-27 Mikhail S. Dubrovin
- in cspad_image_producer.py use default path to calibration directory if parameter "calib_dir" is empty

Tag: V00-00-18
2014-06-24 Mikhail S. Dubrovin
- add ex_peaks_nda to test results of ImgAlgos.CSPadArrPeakFinder 

Tag: V00-00-17
2014-06-24 Mikhail S. Dubrovin
- add GeometryAccess to work with list of geos

Tag: V00-00-16
2014-06-20 Mikhail S. Dubrovin
M       src/AngularIntegrator.py
A       src/GeometryObject.py - "generic" geometry
A       src/TestImageGenerator.py - a bunch of test images
M       src/cspad_image_producer.py - in all python modules in evt.get change np.ndarray to np.int16, ...
M       src/cspad_arr_producer.py
M       src/image_crop.py
M       src/image_save_in_file.py

Tag: V00-00-15
2014-04-28 Mikhail S. Dubrovin