@@ -12,6 +12,10 @@ Please describe any modifications that you made to the package in the
 reverse time order.
 
 =======
+Tag: V00-00-26
+2015-07-16 Mikhail S. Dubrovin
+- GlobalGraphics.py - add window parameter in a few methods
+
 Tag: V00-00-25
 2015-05-12 Mikhail S. Dubrovin
 - add apps in app/ merge_max_ndarrays merge_mask_ndarrays convert_npy_to_txt convert_txt_to_npy
